# SpiralReality-AIT

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  spiral_transformer_julia.py
.github/ISSUE_TEMPLATE/: feedback.yml
.github/workflows/: ci.yml
docker/: README.md  entrypoint.sh  manylinux-build.Dockerfile  runtime.Dockerfile
docs/: ablation.md  hf_metadata.json  release_pipeline.md
docs/community/: architecture.drawio  event_design.md  event_operations.md  feedback_cycle.md  online_pipeline.md
docs/community/surveys/: README.md
docs/whitepaper/: build_whitepaper.py  generate_figures.py  release_checklist.md  whitepaper.md
docs/whitepaper/data/: evaluation_metrics.json  robustness.csv  segmentation_f1.csv
docs/whitepaper/figures/: figures.json
experiments/julia_ablation/: run_sweep.jl  run_sweep.py  sweep_config.toml
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
native/: DEPENDENCIES.md
native/cpp/: CMakeLists.txt  README.md  setup_spiral_numeric_cpp.py  spiral_boundary_cpp.cpp  spiral_boundary_gpu.cpp  spiral_numeric_cpp_module.c  spiral_numeric_cpp_module.cpp  spiral_transformer_cpp.cpp
native/julia/: Project.toml  README.md  SpiralBoundaryJulia.jl  SpiralNumericJulia.jl  SpiralTransformerAblation.jl  SpiralTransformerJulia.jl
notebooks/: TUTORIAL.md  run_demo.ipynb  websocket_demo.ipynb
packaging/: README.md  build_manylinux_wheels.sh  build_wheel.sh  github-actions-ci.yml
scripts/: run_evaluation.py
server/: main.py  requirements.txt
spiral_transformer_cpp/: __init__.py
spiralreality_AIT_onepass_aifcore_integrated/: README.md  __init__.py
spiralreality_AIT_onepass_aifcore_integrated/integrated/: __init__.py  _np_stub_numpy.py  _np_stub_purepy.py  _python_numeric_backend.py  api.py  augmentation.py  benchmark.py  boundary.py  boundary_cpp.py  boundary_julia.py  checkpoint.py  corpus.py  cpp_numeric.py  dynamics.py  encoder.py  encoder_backends.py  gwm_bridge.py  julia_numeric.py  multilingual.py  np_compat.py  np_stub.py  onepass_ait.py  phase.py  run_demo.py  utils.py
spiralreality_AIT_onepass_aifcore_integrated/integrated/aif_core/: __init__.py  agent.py  beliefs.py  efe.py  planning.py  preferences.py  world_model.py
spiralreality_AIT_onepass_aifcore_integrated/integrated/datasets/: __init__.py
tests/: conftest.py  test_benchmarks.py  test_boundary.py  test_corpus.py  test_julia_numeric_helpers.py  test_multilingual.py  test_np_stub_backend_results.py  test_np_stub_backend_strict.py  test_np_stub_flash_attention.py  test_np_stub_precision.py  test_np_stub_regression.py  test_np_stub_regressions.py
tools/: hf_upload.py
